# crm

./: db.sqlite3  pyproject.toml
accounts/: admin.py  forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_auto_20200907_2330.py  0003_product.py  0004_order.py  0005_auto_20200908_2116.py  0006_auto_20200908_2128.py  0007_auto_20200908_2152.py  0008_auto_20200909_0025.py  0009_auto_20200909_0034.py  0010_auto_20200909_0035.py  0011_auto_20200909_1553.py
accounts/templates/acc/: about.html  contact.html  index.html  service.html
accounts/templates/accounts/: Navbar.html  contact.html  dashboard.html  main.html  reviews.html
accounts/templates/acct/: customer.html  customer_form.html  dashboard.html  delete.html  main.html  navbar.html  order_form.html  products.html
crm/: settings.py  urls.py
