[tool.poetry]
name = "crm"
version = "0.1.0"
description = "following a tutorials to create an app"
authors = ["yuenfu001 <64754712+yuenfu001@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
